# dasafio

./: docker-compose.yml
back/: .env.sample  Dockerfile  docker-compose.yml  pyproject.toml
back/app/: containers.py  main.py
back/app/api/: __init__.py  cursos.py  deps.py  users.py
back/app/api/routers/: auth.py  control_token.py  cursos.py
back/app/cache/: __init__.py  config.py  redis.py
back/app/core/: config.py  email.py  jwt.py  logger.py  password.py  user.py
back/app/crud/: __init__.py  base.py
back/app/db/: __init__.py
back/app/db/sqlalchemy/: database.py
back/app/db/sqlmodel/: create_user_staff.py  database.py  model.py
back/app/resources/: error_messages.py
back/app/schemas/: __init__.py  cursos.py  user.py
back/app/service/: auth.py  curso.py
back/tests/: conftest.py  test_app.py
front/: Dockerfile  docker-compose.yml  index.html  package.json  quasar.config.js
front/src/boot/: axios.ts
front/src/components/: DarkModeToggle.vue  EssentialLink.vue  models.ts
front/src/composables/: useNotify.ts  utils.ts
front/src/infra/: api.ts
front/src/layouts/: HomeLayout.vue  LoginLayout.vue  MainLayout.vue
front/src/pages/: PageAlunos.vue  PageCursos.vue  PageMe.vue  PageProfessores.vue
front/src/pages/home/: PageHomePage.vue
front/src/pages/register/: PageConfirm.vue  PageConfirmEmail.vue  PageLogin.vue  PageProfile.vue  PageRegister.vue
front/src/router/: index.ts  routes.ts
front/src/stores/: useData.ts  userAuth.ts
